Responsive overflow has been fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 html::-webkit-scrollbar {
@@ -24,7 +24,7 @@ html::-webkit-scrollbar-thumb {
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, .7), rgba(4, 9, 30, .7)), url(../images/banner.png);
+    background-image: linear-gradient(rgba(4, 9, 30, .7), rgba(4, 9, 30, .7)), url(../images/campus.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -517,7 +517,7 @@ section.cta {
             }
 
             .nav-links {
-                position: absolute;
+                position: fixed;
                 background: var(--primaryColor);
                 height: 100vh;
                 width: 100%;
